--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -33,7 +33,7 @@
               <ion-radio *ngIf='i==0' checked item-start value="{{shop.shopId}}"></ion-radio>
               <ion-radio *ngIf='i!=0' item-start value="{{shop.shopId}}"></ion-radio>
               <ion-label>
-                <p ion-text text-wrap>{{shop.shopId}}. {{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}} </p>
+                <p ion-text text-wrap>{{shop.shopId}}. {{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}}-[{{shop.originalStoreNumber}}] </p>
               </ion-label>
             </ion-item>
           </ion-col>
