--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -34,7 +34,7 @@
                   <ion-item >
                     <ion-radio style="margin: 0px;padding: 1px;" item-start value="{{shop.shopId}}"></ion-radio>
                     <ion-label>
-                      <p class="shop-text" ion-text text-left>{{shop.shopId}}. {{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}}-[{{shop.originalStoreNumber}}] </p>
+                      <p class="shop-text" ion-text text-left>{{shop.originalStoreNumber}}. {{shop.shopName}}, {{shop.shopAddress}} , {{shop.shopCity}}-[{{shop.shopId}}] </p>
                     </ion-label>
                   </ion-item>
                 </ion-col>
@@ -285,14 +285,14 @@
 <p-dialog header="Product Details" [(visible)]="displayDialog" [width]="600">
 
   <div class="ui-g ui-fluid" *ngIf="product">
-
+   
     <div class="ui-g-12">
       <div class="ui-g-4">
         <label for="barcodeId">
           <span class="red">*</span> BarcodeId</label>
       </div>
       <div class="ui-g-8">
-        <input type="number" id="barcodeId" [(ngModel)]="product.barcodeId" required/>
+        <input  type="number" id="barcodeId" [(ngModel)]="product.barcodeId" pattern="^[0-9]*$" required/>
       </div>
     </div>
     <div class="ui-g-12">
@@ -301,7 +301,7 @@
           <span class="red">*</span>Sku</label>
       </div>
       <div class="ui-g-8">
-        <input type="text" id="sku" [(ngModel)]="product.sku" required/>
+        <input type="text" id="sku" [(ngModel)]="product.sku" pattern="^[0-9]*$" required/>
       </div>
     </div>
     <div class="ui-g-12">
@@ -309,7 +309,7 @@
         <label for="name">Product Name</label>
       </div>
       <div class="ui-g-8">
-        <input type="text" id="name" [(ngModel)]="product.name" />
+        <input  type="text" id="name" [(ngModel)]="product.name" />
       </div>
     </div>
     <div class="ui-g-12">
@@ -351,7 +351,7 @@
         <label for="amount">Amount</label>
       </div>
       <div class="ui-g-8">
-        <input type="number" id="amount" [(ngModel)]="product.amount" step="0.1" required/>
+        <input  type="number" id="amount" [(ngModel)]="product.amount" step="0.1" required/>
       </div>
     </div>
     <div class="ui-g-12">
@@ -359,7 +359,7 @@
         <label for="color">Perishable Item?</label>
       </div>
       <div class="ui-g-8">
-        <input type="checkbox" id="color" [(ngModel)]="product.isPerishable" />
+        <input  type="checkbox" id="color" [(ngModel)]="product.isPerishable" />
       </div>
     </div>
     <div class="ui-g-12" style="display: none">
@@ -367,53 +367,12 @@
         <label for="color">delete</label>
       </div>
       <div class="ui-g-8">
-        <input pInputText id="color" [(ngModel)]="product.delete" />
+        <input  type="checkbox" id="color" [(ngModel)]="product.delete" />
       </div>
     </div>
+
   </div>
-  <!-- <ion-list *ngIf="product">
-    <ion-item>
-      <ion-label stacked>Barcode Id</ion-label>
-
-      <ion-input type="text" placeholder="BarcodeId" [(ngModel)]="product.barcodeId" required></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label stacked>Barcode Id</ion-label>
-      <ion-input type="text" placeholder="Sku" [(ngModel)]="product.sku" required></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label stacked>Barcode Id</ion-label>
-      <ion-input type="text" placeholder="Product Name" [(ngModel)]="product.name"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label stacked>Barcode Id</ion-label>
-      <ion-input type="text" placeholder="Enter Image URL" [(ngModel)]="product.image"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label stacked>Barcode Id</ion-label>
-      <ion-input type="text" placeholder="category" [(ngModel)]="product.category"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label stacked>Barcode Id</ion-label>
-      <ion-input type="text" placeholder="Enter Category Image URL" [(ngModel)]="product.categoryImage"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label stacked>Barcode Id</ion-label>
-      <ion-input type="text" placeholder="Subcategory" [(ngModel)]="product.subCategory"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label stacked>Barcode Id</ion-label>
-      <ion-input type="number" placeholder="Amount" step="0.1" [(ngModel)]="product.amount"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label stacked>Barcode Id</ion-label>
-      <ion-checkbox type="checkbox" [(ngModel)]="product.isPerishable"></ion-checkbox>
-    </ion-item>
-  </ion-list> -->
-
-
-
-
+ 
   <p-footer>
     <div class="ui-dialog-buttonpane ui-helper-clearfix" style="float: left;">
       <button ion-button (click)="save()">Save</button>
