--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -48,7 +48,7 @@
                 <ion-item >
                   <ion-radio style="margin: 0px;padding: 1px;" item-start value="{{shop.shopId}}"></ion-radio>
                   <ion-label>
-                    <p class="shop-text" ion-text text-left>{{shop.shopId}}. {{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}}-[{{shop.originalStoreNumber}}] </p>
+                    <p class="shop-text" ion-text text-left>{{shop.originalStoreNumber}}. {{shop.shopName}}, {{shop.shopAddress}} , {{shop.shopCity}}-[{{shop.shopId}}] </p>
                   </ion-label>
                 </ion-item>
               </ion-col>
