--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -51,7 +51,7 @@
                   <ion-item >
                     <ion-radio style="margin: 0px;padding: 1px;" item-start value="{{shop.shopId}}"></ion-radio>
                     <ion-label>
-                      <p class="shop-text" ion-text text-left>{{shop.shopId}}. {{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}}-[{{shop.originalStoreNumber}}] </p>
+                      <p class="shop-text" ion-text text-left>{{shop.originalStoreNumber}}. {{shop.shopName}}, {{shop.shopAddress}} , {{shop.shopCity}}-[{{shop.shopId}}] </p>
                     </ion-label>
                   </ion-item>
                 </ion-col>
@@ -100,6 +100,7 @@
             <ng-template pTemplate="body" let col of columns let-fulfillment>
               <tr>
                 <td><span class="ui-column-title" style="min-width: 40%;">Shop Id</span>{{fulfillment.shopId}}</td>
+                <td><span class="ui-column-title" style="min-width: 40%;">Store Code</span>{{fulfillment.originalStoreCode}}</td>
                 <td><span class="ui-column-title" style="min-width: 40%;">ID</span>{{fulfillment.subscriptionId}}</td>
                 <td><span class="ui-column-title" style="min-width: 40%;">Subscription Id</span>{{fulfillment.subscriptionOrderId}}</td>
                 <td><span class="ui-column-title" style="min-width: 40%;">Fulfillment Id</span>{{fulfillment.actualOrderId}}</td>
@@ -118,6 +119,7 @@
                   <ion-badge showWhen="android,ios" color="secondary">{{fulfillment.paymentMethod}}</ion-badge> 
                 </td>
                 <td>
+                  <span class="ui-column-title" style="min-width: 40%;">Payment Status</span>
                   <ion-badge color="success" *ngIf="fulfillment.paymentDone">PAID</ion-badge>
                   <ion-badge color="light" *ngIf="!fulfillment.paymentDone">PENDING</ion-badge>
                
