--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -34,7 +34,7 @@
                   <ion-item >
                     <ion-radio style="margin: 0px;padding: 1px;" item-start value="{{shop.shopId}}"></ion-radio>
                     <ion-label>
-                      <p class="shop-text" ion-text text-left>{{shop.originalStoreNumber}}. {{shop.shopName}}, {{shop.shopAddress}} , {{shop.shopCity}}-[{{shop.shopId}}] </p>
+                      <p class="shop-text" ion-text text-left>{{shop.originalStoreNumber}}- {{shop.shopName}}, {{shop.shopAddress}} , {{shop.shopCity}}-[{{shop.shopId}}] </p>
                     </ion-label>
                   </ion-item>
                 </ion-col>
@@ -136,7 +136,7 @@
       <ion-col>
           
         <p-table #dt [columns]="cols" [value]="productList" sortMode="multiple" selectionMode="multiple"
-          [(selection)]="selectedProduct" [paginator]="true" [rows]="15" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)"
+          [(selection)]="selectedProduct" [paginator]="true" [rows]="50" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)"
           [scrollable]="true">
           <ng-template pTemplate="caption">
             <div  style="text-align: left">
