--- a/src/pages/promotions/promotions.html
+++ b/src/pages/promotions/promotions.html
@@ -31,7 +31,7 @@
                   <ion-item >
                     <ion-radio style="margin: 0px;padding: 1px;" item-start value="{{shop.shopId}}"></ion-radio>
                     <ion-label>
-                      <p class="shop-text" ion-text text-left>{{shop.originalStoreNumber}}. {{shop.shopName}}, {{shop.shopAddress}} , {{shop.shopCity}}-[{{shop.shopId}}]</p>
+                      <p class="shop-text" ion-text text-left>{{shop.originalStoreNumber}}- {{shop.shopName}}, {{shop.shopAddress}} , {{shop.shopCity}}-[{{shop.shopId}}]</p>
                     </ion-label>
                   </ion-item>
                 </ion-col>
