open url in new tab

--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -177,7 +177,7 @@
                   <button  icon-left ion-button small clear>
                     N/A
                     </button>
-                    <a *ngIf="fulfillment.confirmationLink" href="{{fulfillment.confirmationLink}}">View Confirmation Link</a>
+                    <a *ngIf="fulfillment.confirmationLink" target="_blank" href="{{fulfillment.confirmationLink}}">View Confirmation Link</a>
                 </td>
             </tr>
 
