--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -71,6 +71,21 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
+      <ion-col col-6 col-md-3 col-lg-3 col-xl-3>
+        <ion-card>
+
+          <img src="assets/imgs/apartment.png" class="dashboard-icons" />
+
+
+          <ion-card-content>
+            <ion-card-title>
+              <button ion-button block (click)="appartments()">
+                <p ion-text color="secondary" text-center><strong> Appartments</strong></p>
+              </button>
+            </ion-card-title>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
     </ion-row>
   </ion-grid>
 
