--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -29,7 +29,7 @@
         <div class="form-group">
           <div class="input-group" name="daterangeInput" daterangepicker [options]="options" (selected)="selectedDate($event)">
             <span class="form-control uneditable-input">
-              {{ daterange.start | date:'dd/MM/yyyy' }} - {{ daterange.end| date:'dd/MM/yyyy' }}
+              {{ daterange.start | date:'dd/MM/yyyy' }}
             </span>
             <span class="input-group-btn">
               <a type="button" class="btn btn-default">
