--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,81 +11,18 @@
 <ion-content no-padding>
   <ion-grid>
     <ion-row>
-      <ion-col col-6 col-md-3 col-lg-3 col-xl-3>
-        <ion-card>
-
-          <img src="assets/imgs/track.png" class="dashboard-icons" />
-
-
-          <ion-card-content>
-            <ion-card-title>
-              <button ion-button block (click)="getOrderDetails()">
-                <p ion-text color="secondary" text-center text-uppercase><strong>Track Orders</strong> </p>
-              </button>
-            </ion-card-title>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-
-      <ion-col col-6 col-md-3 col-lg-3 col-xl-3>
-        <ion-card>
-          <img src="assets/imgs/catalog.png" class="dashboard-icons" />
-          <ion-card-content>
-            <ion-card-title>
-              <button ion-button block (click)="uploadCatalog()">
-                <p ion-text color="secondary" text-center><strong>Upload Catalog</strong> </p>
-              </button>
-            </ion-card-title>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-
-      <ion-col col-6 col-md-3 col-lg-3 col-xl-3>
-        <ion-card>
-
-          <img src="assets/imgs/promotion.png" class="dashboard-icons" />
-
-
-          <ion-card-content>
-            <ion-card-title>
-              <button ion-button block (click)="promotions()">
-                <p ion-text color="secondary" text-center><strong>Banners</strong></p>
-              </button>
-            </ion-card-title>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-
-      <ion-col col-6 col-md-3 col-lg-3 col-xl-3>
-        <ion-card>
-
-          <img src="assets/imgs/inventory.png" class="dashboard-icons" />
-
-
-          <ion-card-content>
-            <ion-card-title>
-              <button ion-button block (click)="inventory()">
-                <p ion-text color="secondary" text-center><strong> Required Stock</strong></p>
-              </button>
-            </ion-card-title>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-      <ion-col col-6 col-md-3 col-lg-3 col-xl-3>
-        <ion-card>
-
-          <img src="assets/imgs/apartment.png" class="dashboard-icons" />
-
-
-          <ion-card-content>
-            <ion-card-title>
-              <button ion-button block (click)="appartments()">
-                <p ion-text color="secondary" text-center><strong> Appartments</strong></p>
-              </button>
-            </ion-card-title>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
+      <ion-col col-6 col-md-3 col-lg-3 col-xl-3 *ngFor="let menu of navigation">
+          <ion-card>
+            <img src="{{menu.img}}" class="dashboard-icons" />
+            <ion-card-content>
+              <ion-card-title>
+                <button ion-button block (click)="this[menu.action]()">
+                  <p ion-text color="secondary" text-center><strong> {{menu.title}}</strong></p>
+                </button>
+              </ion-card-title>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
     </ion-row>
   </ion-grid>
 
