--- a/src/pages/apartments/apartments.html
+++ b/src/pages/apartments/apartments.html
@@ -16,7 +16,7 @@
 
 
 <ion-content no-padding>
-  <ion-grid>
+ <!-- <ion-grid>
     <div class="header-bar">
       <ion-title ion-text>
         <ion-icon name="search"></ion-icon>&nbsp; Select Shop</ion-title>
@@ -44,7 +44,7 @@
         </ion-list>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
 
 
 
