added updated url

--- a/src/pages/apartments/apartments.html
+++ b/src/pages/apartments/apartments.html
@@ -82,7 +82,7 @@
       <ion-col *ngIf="uploadApartments==true">
         <p-fileUpload name="myfile[]" customUpload="true" accept=".csv" (uploadHandler)="bulkUploadApartment($event)">
           <ng-template pTemplate="content">
-            <a href="https://storage.cloud.google.com/perpule-1248.appspot.com/04082017004336.149_c1290960_2096_Item.csv">
+            <a href="https://storage.googleapis.com/perpule-subscription/assets/Apartment_Sample.csv">
               <button ion-button small outline>Sample CSV</button>
             </a>
           </ng-template>
