--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,11 +10,11 @@
 
 <ion-content no-padding>
   <ion-grid>
-    <ion-row>
+    <ion-row padding>
       <ion-col col-6 col-md-3 col-lg-3 col-xl-3 *ngFor="let menu of navigation">
           <ion-card>
             <img src="{{menu.img}}" class="dashboard-icons" />
-            <ion-card-content>
+            <ion-card-content no-padding>
               <ion-card-title>
                 <button ion-button block (click)="this[menu.action]()">
                   <p ion-text color="secondary" text-center><strong> {{menu.title}}</strong></p>
