--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,7 +27,7 @@
         </ion-card>
       </ion-col>
 
-      <ion-col col-6 col-md-3 col-lg-3 col-xl-3>
+      <ion-col col-6 col-md-3 col-lg-3 col-xl-3 *ngIf="admin && admin.rolesMap.HO">
         <ion-card>
           <img src="assets/imgs/catalog.png" class="dashboard-icons" />
           <ion-card-content>
@@ -40,7 +40,7 @@
         </ion-card>
       </ion-col>
 
-      <ion-col col-6 col-md-3 col-lg-3 col-xl-3>
+      <ion-col col-6 col-md-3 col-lg-3 col-xl-3 *ngIf="admin && admin.rolesMap.HO">
         <ion-card>
 
           <img src="assets/imgs/promotion.png" class="dashboard-icons" />
@@ -50,6 +50,22 @@
             <ion-card-title>
               <button ion-button block (click)="promotions()">
                 <p ion-text color="secondary" text-center><strong>Banners</strong></p>
+              </button>
+            </ion-card-title>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+
+      <ion-col col-6 col-md-3 col-lg-3 col-xl-3 *ngIf="admin && admin.rolesMap.HO && admin.rolesMap.BB">
+        <ion-card>
+
+          <img src="assets/imgs/delivery.png" class="dashboard-icons" />
+
+
+          <ion-card-content>
+            <ion-card-title>
+              <button ion-button block (click)="deliveryStatus()">
+                <p ion-text color="secondary" text-center><strong> Delivery Status</strong></p>
               </button>
             </ion-card-title>
           </ion-card-content>
