--- a/src/pages/fareye-deliveries/fareye-deliveries.html
+++ b/src/pages/fareye-deliveries/fareye-deliveries.html
@@ -98,8 +98,8 @@
               </tr>
               <tr>
                   <th *ngFor="let col of columns" [ngSwitch]="col.field">
-                      <input *ngSwitchCase="'fulfillmentId'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
-                      <input *ngSwitchCase="'name'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, col.filterMatchMode)">
+                      <input *ngSwitchCase="'fulfillmentId'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                      <input *ngSwitchCase="'name'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
                       
                   </th>
               </tr>
