--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,6 +25,12 @@
         </ion-col>
     </ion-row>
   </ion-grid>
-
-
+<!-- <ion-tabs selectedIndex="0">
+  <ion-tab tabTitle="Dashboard" [root]="tab2" ></ion-tab>
+  
+</ion-tabs> -->
 </ion-content>
+
+<ion-footer>
+
+</ion-footer>
