--- a/src/pages/apartments/apartments.html
+++ b/src/pages/apartments/apartments.html
@@ -208,7 +208,7 @@
           <label for="amount">LandMark</label>
         </div>
         <div class="ui-g-8">
-          <input type="text" [(ngModel)]="apartment.landMark" required/>
+          <input type="text" [(ngModel)]="apartment.landMark"/>
         </div>
         <p class="red">{{apartmentFormError.landMark}}</p>
       </div>
